05-dashboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banking-dashboard
  namespace: banking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard
  template:
    metadata:
      labels:
        app: dashboard
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        fsGroup: 2000    
      serviceAccountName: banking-dashboard-sa
      containers:
        - name: dashboard
          image: bishoynabila/banking-dashboard:v1.0
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
              - ALL
              add:
              - NET_BIND_SERVICE
          volumeMounts:
          - name: nginx-cache
            mountPath: /var/cache/nginx

          - name: nginx-run
            mountPath: /var/run               
          ports:
            - containerPort: 80
      volumes:
      - name: nginx-cache
        emptyDir: {}

      - name: nginx-run
        emptyDir: {}
