06-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: banking-api-service
  namespace: banking
spec:
  selector:
    app: banking-api
  ports:
    - port: 3000
      targetPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: banking-dashboard-service
  namespace: banking
spec:
  selector:
    app: dashboard
  ports:
    - port: 80
      targetPort: 80

---
apiVersion: v1    #headless_service
kind: Service
metadata:
  name: postgres-db
  namespace: banking
spec:
  clusterIP: None
  selector:
    app: postgres
  ports:
    - port: 5432
